version 0.3.0 - currently working on
- Added Selectorbox for list style (#233)
- Code cleanup and refactoring (#86)
- Fixed a small CSS issue (#249)
- Feature: Size limitations to pop-up images (#245)
- Feature: Different date formats for different fields in FE (#294)
- Feature: Different link targets depending on file type (#265)
- Added new screenshots to the manual (#253)
- Added sample realurl configuration (#258)
- Fixed localization bug in Backend (#252)

version 0.2.5 - released on 2006-08-24
- Added new dummy images (#231)
- Added CSS styles to beautify the back button (#230)
- Fixed wrong output when using the universal fields (#234)
- Added person selector to group records (#213)
- Added CSS class to detail link in the template (#217)
- Removed the outdated configuration files in the EM (#224)
- Fixed missing CSS file selector in flexform (#215)
- Fixed a problem with multiple inclusion of the CSS file (#214)
- Fixed a misplaced marker in the template (#216)
- Added field gender to person records (#201)

version 0.2.0 - released on 2006-07-28
- Fixed sorting of team leaders in teamlist (#200)
- Fixed wrong default sort criteria in the backend (#184)
- Fixed the output of BOX module with multiple persons (#208)
- Feature: Selection of the contact person for the BOX module (#137)
  --> Attention! Old contact person associations need to be set again!
- Fixed: Missing generation of markers in the list view (#40)
- Removed the old template file from the CVS Repository (#199)
- Added feature to show the persons age instead of the birthdate (#198)
- Fixed a bug with repeated team leaders shown in teamlist (#190)
- Added field "birthdate" (#142)
- Added a "ignore group leaders" switch for the teamlist (#192)
- Fixed sort order of the teamlist (#191)
- Fixed wrong sort order in group list (#194)
- Improved German translation (#152)
- Improved the "person is member of groups" function (#185)
- Added a field "in company since" (#148)
