@@ -41,6 +41,9 @@ plugin.tx_bzdstaffdirectory_pi1 {
 	# switch to hide the team leaders in the team list
 	ignoreTeamLeaders = 0
 
+	# whether to disable the "back" link
+	disableBackLink = 0
+
 	# whether to show the age or the birthdate of a person
 	showAgeInsteadOfBirthdate = 0
 
