@@ -167,6 +167,15 @@
 								</config>
 						</TCEforms>
 					</showimages>
+					<disableBackLink>
+						<TCEforms>
+								<label>LLL:EXT:bzd_staff_directory/locallang_db.php:tt_content.pi_flexform.disableBackLink</label>
+								<config>
+										<type>check</type>
+										<default>0</default>
+								</config>
+						</TCEforms>
+					</disableBackLink>
 					<spamprotectionmode>
 						<TCEforms>
 							<label>LLL:EXT:bzd_staff_directory/locallang_db.xml:pi_flexform_spamprotectionmode</label>
